Mentioning the magnetic field and cyclotron orbit in Latex

--- a/latex/free_electron_Chambers_to_Drude.tex
+++ b/latex/free_electron_Chambers_to_Drude.tex
@@ -11,6 +11,7 @@ We are considering a free electron dispersion, it is isotropic in $\vec{k}$-spac
 	\item The scattering rate is uniform and we write $\frac{1}{\tau}= \Gamma$ 
 	\item The Fermi surface is a sphere of radius $k_F$ with $\vec{k} = k_F\hat{e}_r$
 	\item On the FS, $\vec{v_F} = \frac{1}{\hbar}\frac{\partial E(\vec{k})}{\partial\vec{k}} = \frac{1}{\hbar}\frac{\hbar^2}{2m^*}2k_F\hat{e}_r = \frac{\hbar}{m^*}k_F\hat{e}_r$
+	\item We apply a magnetic field $\vec{B} = B\hat{e_z}$ so that the electrons have cyclotron orbits on the Fermi sphere in the $(x,y)$ plane
 \end{itemize} 
 
 With these definitions in mind, we can apply Chambers' formula\ref{}, where $\hbar\equiv1$ was set : 
