--- a/report/report.tex
+++ b/report/report.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath,bm,empheq,graphicx,hyperref,siunitx,subcaption,upgreek,xcolor}
 \usepackage[italicdiff]{physics}
 \usepackage[justification=centering]{caption}
+\usepackage{indentfirst}
 
 \hypersetup{colorlinks=true, urlcolor=cyan}
 \newcommand{\angstrom}{\textup{\AA}}
@@ -14,7 +15,6 @@
 
 \begin{document}
 \maketitle
-\section{Introduction \& Problem Statement}
 \include{1_introduction/1_lsi}
 \include{1_introduction/2_hightc}
 \include{1_introduction/3_qcp}
