added michon and legros figures

--- a/report/1_introduction/4_optical_conductivity.tex
+++ b/report/1_introduction/4_optical_conductivity.tex
@@ -1,3 +1,23 @@
+\begin{figure}
+    \centering
+    \begin{subfigure}{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figures/michon}
+        \caption{Measurements of Michon et al. showing a peak in $C/T$ which signifies the existence
+            of a QCP.}
+        \label{fig:michon}
+    \end{subfigure}\hfill
+    \begin{subfigure}{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figures/legros}
+        \caption{Measurements of Legros et al. drawn onto the measurements from Michon et al.,
+            showing no peak in the cyclotron mass.}
+        \label{fig:michon}
+    \end{subfigure}
+    \caption{Comparison of the measurements of Michon et al. and Legros et al.}
+    \label{fig:comparison}
+\end{figure}
+
 \subsection{Evidence against the QCP: Optical Conductivity}
 In their 2022 paper, \textit{Legros et al.} \cite{legros2022} instead used optical conductivity to
 probe the QCP. To do so, the first measured the optical conductivity of LSCO cuprates in various
