wrote most of the results section

--- a/report/report.tex
+++ b/report/report.tex
@@ -28,6 +28,11 @@
 \include{2_optical_conductivity/3_chambers}
 
 \section{Results}
+\include{3_results/1_drude_vs_chambers}
+\include{3_results/2_reproduction}
+\include{3_results/3_fitting}
+\include{3_results/4_effective_mass}
+\include{3_results/5_discussion}
 
 \bibliographystyle{plain}
 \bibliography{ref}
