Additions part 2 and change to includes

--- a/report/1_introduction/6_goals.tex
+++ b/report/1_introduction/6_goals.tex
@@ -1,1 +1,19 @@
-Our project around a set of goals we
+During our project, we gradually set and met the following goals. In particular, we achieved to : 
+\begin{itemize}
+	\item develop a tool to extract data from graphs published in the literature;
+	\item reproduce the fitting results of the papers we extracted the data from;
+	\item develop a tool to calculate a better model (Chambers' formula) by adapting existing code used for other experiments;
+	\item analytically compare the two models (Drude and Chambers') and show that the latter reduces to the former under a 'free electron' hypothesis;
+	\item validate the new numerical method by comparing calculated numerical results in the 'free electron' hypothesis with the Drude model;
+	\item develop a fitting tool leveraging the new code, existing packages;
+	\item qualitatively analyse (explore) the parameter space to prepare fitting;
+	\item perform the fits and find the best fitting protocol, on one sample.
+\end{itemize}
+
+\vspace{20mm}
+
+Due to a lack of time, we were not able, as of the writing of this report, to :
+\begin{itemize}
+	\item extract the parameters that would reveal or deny the existence of criticality;
+	\item perform the procedure on all samples to conclude.
+\end{itemize}
