Add suggestion to include Post reproduction

--- a/report/3_results/2_reproduction.tex
+++ b/report/3_results/2_reproduction.tex
@@ -23,3 +23,12 @@ superconducting singularity, fitting it separately is a reasonable choice.
         simultaneously.}
     \label{fig:drude_fit_bad}
 \end{figure}
+
+%%% We can show the reproduction of Post et al. too maybe ?
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{figures/fitting_Drude_extracted_Gamma.pdf}
+    \caption{ADD SUBFIGURE A comparison of our and their fits with their data}
+    \label{fig:drude_fit_good}
+\end{figure}
