--- a/report/2bis_code_and_tools/1_plot_digitization.tex
+++ b/report/2bis_code_and_tools/1_plot_digitization.tex
@@ -1,3 +1,8 @@
 \subsection{Plot digitization}
 Since the raw data of Legros et al. is not publicly available, we digitized the data from their
-paper using a custom script extracting the data from svg exports of the figures.
+paper using a custom script extracting the data from svg exports of the figures. Digital files of
+papers contain vector graphics, which encode path data for drawing lines. By reading this path data
+and using some reference points to set the scale, we can extract the data points from the plot.
+Doing the digitization exactly, instead of the more traditional hand-extraction, allowes us to
+avoid added errors through the digitization process and streamline the data extraction for many
+curves.
