--- a/report/2bis_code_and_tools/1_plot_digitization.tex
+++ b/report/2bis_code_and_tools/1_plot_digitization.tex
@@ -1,13 +1,21 @@
 \subsection{Plot digitization}
-Since the raw data of \textit{Legros et al.} is not publicly available, 
-we digitized the data from their paper using a custom script extracting the data from SVG exports of the figures. 
+Once we understood well the disadvantages the Drude model had, 
+and the potential benefits of using Chambers' formula instead, 
+we needed to get access to the experimental data in order to 
+first reproduce the literature's Drude modelling and 
+second run our own fits using Chambers' formula.\\
+
+Since the raw data of \textit{Legros et al.} and \textit{Post et al.} is not publicly available neither in the articles nor in supplemental data files, 
+we digitized it from their papers using a custom script extracting the data from SVG exports of the figures. 
+
 Digital files of papers contain vector graphics, 
 which explicitly encode graphs as points and paths with given coordinates to draw lines. 
 A difficulty lies in matching what is visually one curve on a given graph to the associated points in the file structure definition 
 (this can depend greatly on the program and version that were used to generate the plot). 
 Once the file structure is analysed and understood, 
 we can extract the data points from the plot by reading the path data and using some reference points to set the scale.
-This is a direct and semi-automatic way to do plot digitization. 
+This is a direct and semi-automatic way to do plot digitization.
+ 
 When compared to the more traditional hand-extraction where one has to manually click on different points of the graph, 
 this allows us to avoid added errors through the digitization process 
 and to streamline the data extraction, extracting many curves at once.
