Fix typo in 2.1

--- a/report/2_optical_conductivity/1_what_is_optical_conductivity.tex
+++ b/report/2_optical_conductivity/1_what_is_optical_conductivity.tex
@@ -31,6 +31,6 @@ transmission and reflection.
 \textit{Legros et al.} chose a transmission setup through a thin film ($\sim 10$ nm, 10-100 layers) as their method. 
 The full experimental setup is not without challenges but is not directly relevant to our study. 
 However, we can note that since the electronic properties of cuprates are mainly 2D 
-(owing to their peroskite structure, as explained above), 
+(owing to their perovskite structure organised in planes, as explained above), 
 the use of thin films is not unreasonable 
 and doesn't affect the relevance of the results for bulk materials.
