--- a/report/3_results/1_drude_vs_chambers.tex
+++ b/report/3_results/1_drude_vs_chambers.tex
@@ -6,12 +6,16 @@
     \label{fig:free_electrons}
 \end{figure}
 
-To make sure our new model makes sense, we need some form of validation. Since the Drude model works
-well for non-anisotropic materials, having ``free'' electrons, the Chambers model should produce
-results that are consistent with the Drude model in this case. We showed that this is mathematically
-true (\textcolor{red}{TODO: appendix}).
+As we explained above, and derived in appendix \textcolor{red}{appendix}, 
+the Drude model assumes that the system has particular 'free electron' transport properties. 
+This is merely a special case for Chambers' formula, 
+and under these assumptions, 
+both models are analytically fully equivalent.
 
-After equipping the numerical package with the ability to cacluate optical conductivity, we compared
-the output of our implementation of the Chambers model to the Drude model for free electrons. Figure
-\ref{fig:free_electrons} shows how the two models agree for free electrons. We used this case for
-validating our implementation of the Chambers model.
+To make sure our numerical implementation of the new model makes sense, 
+we can use this result as a form of validation of our code, on a known case. 
+We compared the output of our implementation of Chambers' model in the case of free electrons to the Drude model. 
+Figure \ref{fig:free_electrons} shows how the numerical model and the Drude explicit formula agree in this case, \textcolor{red}{for various values of the field B}.
+
+This successful validation test gave us confidence in the soundness of our implementation for further use, 
+however this test is not foolproof and we also double-checked the code itself.
