--- a/report/3_results/1_drude_vs_chambers.tex
+++ b/report/3_results/1_drude_vs_chambers.tex
@@ -10,7 +10,7 @@ As we explained above, and derived in appendix \textcolor{red}{appendix},
 the Drude model assumes that the system has particular 'free electron' transport properties. 
 This is merely a special case for Chambers' formula, 
 and under these assumptions, 
-both models are analytically fully equivalent.
+both models are analytically fully equivalent (see appendix \ref{sec:equivalence}).
 
 To make sure our numerical implementation of the new model makes sense, 
 we can use this result as a form of validation of our code, on a known case. 
