--- a/report/report.tex
+++ b/report/report.tex
@@ -8,6 +8,7 @@
 \hypersetup{colorlinks=true, urlcolor=cyan}
 \newcommand{\angstrom}{\textup{\AA}}
 \newcommand{\ddfrac}[2]{{\displaystyle\frac{\displaystyle #1}{\displaystyle #2}}}
+\newcommand\myeq{\mathrel{\overset{\makebox[0pt]{\mbox{\normalfont\tiny\sffamily IBPx2}}}{=}}}
 
 \title{Quantum Criticallity in Cuprate Superconductors: PRL Report}
 \author{Matéo Rivera, Saleh Shamloo Ahmadi\\Supervisor: Gaël Grissonnanche}
@@ -40,5 +41,9 @@
 
 \bibliographystyle{plain}
 \bibliography{ref}
+
+\appendix
+\input{4_appendix/1_chambers}
+\input{4_appendix/2_equivalence}
 
 \end{document}
