Add qualtitative scaffold

--- a/report/report.tex
+++ b/report/report.tex
@@ -35,6 +35,7 @@
 \section{Results}
 \input{3_results/1_drude_vs_chambers}
 \input{3_results/2_reproduction}
+\input{3_results/2bis_qualitative_understanding}
 \input{3_results/3_fitting}
 \input{3_results/4_effective_mass}
 \input{3_results/5_discussion}
