--- a/report/report.tex
+++ b/report/report.tex
@@ -4,6 +4,9 @@
 \usepackage[italicdiff]{physics}
 \usepackage[justification=centering]{caption}
 \usepackage{indentfirst}
+\usepackage{subcaption}
+\usepackage{graphicx}
+
 
 \hypersetup{colorlinks=true, urlcolor=cyan}
 \newcommand{\angstrom}{\textup{\AA}}
