added chambers derivation appendix

--- a/report/2_optical_conductivity/3_chambers.tex
+++ b/report/2_optical_conductivity/3_chambers.tex
@@ -13,8 +13,8 @@ which can show more subtleties in its physical description.
 Using the equation, with a few reasonable assumptions, 
 one can derive the Chambers formula for conductivity. 
 The formula is usually applied for DC resistivity, 
-but it can be generalized for optical conductivity too.\cite{%The derivation
-}. This model has been used successfully in the past to study the behavior of cuprates 
+but it can be generalized for optical conductivity too (see appendix \ref{sec:chambers}).
+This model has been used successfully in the past to study the behavior of cuprates 
 and make predictions about their physical properties\cite{grissonnanche2021}, 
 justifying its use here. \\
 
