completed results section

--- a/report/3_results/4_effective_mass.tex
+++ b/report/3_results/4_effective_mass.tex
@@ -12,6 +12,21 @@ we need to average over the wavevectors. So
     m_c = \frac{\hbar}{2\pi}\oint\frac{\dd{k}}{v_\perp (k)}
 \end{equation}
 where $v_\perp$ is the velocity perpendicular to the magnetic field, on the path the charge
-carriers take\footnote{This is a closed path on the Fermi surface, since the magnetic field does
+carriers take.\footnote{This is a closed path on the Fermi surface, since the magnetic field does
 not do work and the free charges are on the Fermi surface. The path is closed due to the periodic
 nature of the oscillations.}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{figures/effective_mass}
+    \caption{Comparison of our calculated effective masses with Michon et al. and Legros et al.}
+    \label{fig:effective_mass}
+\end{figure}
+
+In Figure \ref{fig:effective_mass}, we present our final results for the effective mass and compare
+them with the results of Michon et al. and Legros et al. Due to data unavailability, we have very
+few points for comparison, so drawing strong conclusions is difficult. However, we can see that
+our results are qualitatively closer to Michon et al., in the sense that the effective mass does
+not decrease and increase as much in low and high doping respectively, and that it is roughly
+decreasing in the measured range like Michon et al. Again, the data is very sparse and there are
+large errors, so these conclusions are not definitive.
