updated goals section to reflect current state of the project

--- a/report/1_introduction/6_goals.tex
+++ b/report/1_introduction/6_goals.tex
@@ -1,4 +1,5 @@
-During our project, we gradually set and met the following goals. In particular, we achieved to : 
+\subsection{Goals}
+During our project, we gradually set and met the following goals. In particular, we succeeded to: 
 \begin{itemize}
 	\item develop a tool to extract data from graphs published in the literature;
 	\item reproduce the fitting results of the papers we extracted the data from;
@@ -6,14 +7,14 @@ During our project, we gradually set and met the following goals. In particular,
 	\item analytically compare the two models (Drude and Chambers') and show that the latter reduces to the former under a 'free electron' hypothesis;
 	\item validate the new numerical method by comparing calculated numerical results in the 'free electron' hypothesis with the Drude model;
 	\item develop a fitting tool leveraging the new code, existing packages;
-	\item qualitatively analyse (explore) the parameter space to prepare fitting;
-	\item perform the fits and find the best fitting protocol, on one sample.
+	\item qualitatively analyze (explore) the parameter space to prepare fitting;
+	\item perform the fits and find the best fitting protocol on one data from one doping level.
+	\item repeat the fitting on data from other doping levels.
+	\item extract the effective mass from the fitting results.
+	\item compare the results with the literature.
 \end{itemize}
-
-\vspace{20mm}
-
-Due to a lack of time, we were not able, as of the writing of this report, to :
+Due to a lack of time, we were not able to:
 \begin{itemize}
-	\item extract the parameters that would reveal or deny the existence of criticality;
-	\item perform the procedure on all samples to conclude.
+	\item do rigorous error analysis;
+	\item make a more complex model for lower doping levels;
 \end{itemize}
