--- a/report/1_introduction/3_qcp.tex
+++ b/report/1_introduction/3_qcp.tex
@@ -13,7 +13,7 @@ temperature. This phase transition is driven by quantum effects, hence the name.
 Cuprates, this is a critical doping level, usually denoted by $p_c$ or $p^*$. The actual existence
 of a QCP for Cuprates is still a matter of debate and it is the subject of this project.
 
-In their 2019 paper, \textit{Michon et al.} \cite{michon2019} used secific heat measurements to
+In their 2019 paper, Michon et al. \cite{michon2019} used secific heat measurements to
 show the existence of the QCP. The effective mass of the charge carriers is expected to diverge at
 the QCP, and the effective mass is proportional to $C/T$ where $C$ is the specific heat attributed
 to the charge carriers and $T$ is the temperature. So, to probe the QCP, Michon et al. measured
