--- a/report/1_introduction/4_optical_conductivity.tex
+++ b/report/1_introduction/4_optical_conductivity.tex
@@ -19,7 +19,7 @@
 \end{figure}
 
 \subsection{Evidence against the QCP: Optical Conductivity}
-In their 2022 paper, \textit{Legros et al.} \cite{legros2022} instead used optical conductivity to
+In their 2022 paper, Legros et al. \cite{legros2022} instead used optical conductivity to
 probe the QCP. To do so, the first measured the optical conductivity of LSCO cuprates in various
 fields. Then, they fitted a model for the conductivity called the Drude formula to the data. The
 Drude formula is a simple classical model that has been used for a long time in condensed matter
@@ -33,9 +33,9 @@ linear relation between the cyclotron frequency and the magnetic field;
 They argue the cyclotron mass is the same as the effective mass of the charge carriers
 ($m_c \sim m^*$).
 
-At the end of all the analysis, \textit{Legros et al.} found that the cyclotron mass does not peak
+At the end of all the analysis, Legros et al. found that the cyclotron mass does not peak
 at the critical doping level and simply increases with doping. This is in contradiction with the
-results of \textit{Michon et al.} and suggests that there is no QCP in Cuprates.
+results of Michon et al. and suggests that there is no QCP in Cuprates.
 
 We believe, however, that their data analysis is problematic, because of the use of the Drude
 formula. Eventhough the Drude formula is derived using classical physics, it is highly effective for
