--- a/report/2_optical_conductivity/1_what_is_optical_conductivity.tex
+++ b/report/2_optical_conductivity/1_what_is_optical_conductivity.tex
@@ -15,7 +15,7 @@ Here, because we're talking about periodic excitations, this complex conductivit
 
 Optical conductivity is a powerful probe into the electronic properties of the examined material, 
 giving a better insight than DC conductivity alone. 
-Moreover, as is done in \textit{Legros et al.}, 
+Moreover, as is done in Legros et al., 
 it is possible to apply an external magnetic field to the sample. 
 This yields interesting behaviours such as Angle Dependent Magnetoresistance (ADMR) 
 or the results of the experiment at hand. \\
@@ -28,9 +28,9 @@ In this case, there are two main categories of experiments that can be carried o
 transmission and reflection. 
 
 
-\textit{Legros et al.} chose a transmission setup through a thin film ($\sim 10$ nm, 10-100 layers) as their method. 
+Legros et al. chose a transmission setup through a thin film ($\sim 10$ nm, 10-100 layers) as their method. 
 The full experimental setup is not without challenges but is not directly relevant to our study. 
 However, we can note that since the electronic properties of cuprates are mainly 2D 
-(owing to their perovskite structure organised in planes, as explained above), 
+(owing to their peroskite structure, as explained above), 
 the use of thin films is not unreasonable 
 and doesn't affect the relevance of the results for bulk materials.
