--- a/report/2_optical_conductivity/2_drude_modelling.tex
+++ b/report/2_optical_conductivity/2_drude_modelling.tex
@@ -1,5 +1,5 @@
-\subsection{What are the hypotheses of the Drude model ?}
-As was stated previously, \textit{Legros et al.} used the Drude model to analyze their data. 
+\subsection{What are the hypotheses of the Drude model?}
+As was stated previously, Legros et al. used the Drude model to analyze their data. 
 This phenomenological model is common and of great use, but it assumes that we study 'free electrons' that only periodically get scattered with a scattering rate $\Gamma$, 
 which is strictly speaking false for electrons in solids, 
 where they interact with a periodic lattice.
@@ -34,7 +34,7 @@ where $\omega$ is the frequency of the electromagnetic waves and the adjustable 
 \end{itemize}
 Left handed circular polarization is given by a negative omega and right handed by a positive omega.
 
-As stated in \textit{Legros et al.} and other sources, 
+As stated in Legros et al. and other sources, 
 the high-frequency dielectric constant does not greatly improve the quality of the fit and its results, so it is set to 1.
 Additionally, we can see here that in this model, the superconducting carriers only contribute to the imaginary part of $\sigma$. 
 This ended up being relevant to inform our fitting choices in the end.
