--- a/report/3_results/2_reproduction.tex
+++ b/report/3_results/2_reproduction.tex
@@ -45,7 +45,7 @@ assert that they definitly did this to ``fix'' their fits.
 \end{figure}
 
 %%% We can show the reproduction of Post et al. too maybe ?
-We also used data from \textit{Post et al.} which we were able to reproduce quite well. 
+We also used data from Post et al. which we were able to reproduce quite well. 
 In this case, we had no particular issues during the fitting process except for a few extraneous points. 
 We were able to fit the data and recreate their plots that extract a field dependence for the $\omega_{p,n}$, $\omega_c$, and $\Gamma$ parameters of the Drude model.
 
@@ -67,6 +67,6 @@ in principle, not depend on $B$.
     \label{fig:gamma_extraction_theirs}
 \end{subfigure}
         
-\caption{Reproduction of \textit{Post et al.} data analysis and extraction of isotropic Drude scattering $\Gamma$ as a function of applied field $B$}
+\caption{Reproduction of Post et al. data analysis and extraction of isotropic Drude scattering $\Gamma$ as a function of applied field $B$}
 \label{fig:reproduction_post}
 \end{figure}
