added pagebraks before new sections

--- a/report/report.tex
+++ b/report/report.tex
@@ -19,6 +19,8 @@
 
 \begin{document}
 \maketitle
+\tableofcontents
+\newpage
 \input{1_introduction/1_lsi}
 \input{1_introduction/2_hightc}
 \input{1_introduction/3_qcp}
@@ -26,15 +28,18 @@
 \input{1_introduction/5_boltzmann}
 \input{1_introduction/6_goals}
 
+\newpage
 \section{Optical Conductivity}
 \input{2_optical_conductivity/1_what_is_optical_conductivity}
 \input{2_optical_conductivity/2_drude_modelling}
 \input{2_optical_conductivity/3_chambers}
 
+\newpage
 \section{Codes and tools developed}
 \input{2bis_code_and_tools/1_plot_digitization}
 \input{2bis_code_and_tools/2_from_ADMR_to_optical_conductivity}
 
+\newpage
 \section{Results}
 \input{3_results/1_drude_vs_chambers}
 \input{3_results/2_reproduction}
